Adds game board div and button container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="game-board">
+        <div id="button-container"><button id="erase">Toggle Eraser</button><button id="reset">Reset</button></div>
+        <div id="container">
+        </div>
+        <div>Etch-A-Sketch Odin Project by Renatuscape</div>
     </div>
 </body>
 
