Adds brush strength settings

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
     <script src="app.js" defer></script>
+    <script src="brushController.js" defer></script>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="game-board">
-        <div id="button-container"><button id="erase">Toggle Eraser</button><button id="reset">Reset</button></div>
+        <div id="button-container"><button id="erase">Toggle Eraser</button><div id="brush-settings"></div><button id="reset">Reset</button></div>
         <div id="container">
         </div>
         <div>Etch-A-Sketch Odin Project by Renatuscape</div>
