Adds link to GitHub in footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="button-container"><button id="erase">Toggle Eraser</button><div id="brush-settings"></div><button id="reset">Reset</button></div>
         <div id="container">
         </div>
-        <div>Etch-A-Sketch Odin Project by Renatuscape</div>
+        <div>Etch-A-Sketch Odin Project by <a target='_blank' href='https://github.com/Renatuscape'>Renatuscape</a></div>
     </div>
 </body>
 
